--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.64.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.64.1"
   },
   "scripts": {
     "start": "react-scripts start",
