--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
     "prop-types": "^15.8.1",
@@ -15,8 +16,10 @@
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "stream": "^0.0.2"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
