--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "derniertestfirebase": "file:",
     "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
     "prop-types": "^15.8.1",
